Fix a little error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			Maya Status Platform: Uses the Maya Status Platform to get the status of the BOT and wake up. Host Service
 		</div>
 		<div class="window closed" data-title="Third">
-			Maya Android App: Download <a href="https://www.appcreator24.com/app989117">here</href>
+			Maya Android App: Download <a href="https://www.appcreator24.com/app989117">here</a>
 		</div>
 		<div class="window" data-title="Welcome">
 			<h1>José Manuel Suárez Tocino / absoluteionic</h1>
