Modified some titles and actions

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
 	<div id="desktop">
-		<div class="window" data-title="First">
+		<div class="window closed" data-title="Maya BOT Source">
 			Maya Bot: Free Open Source waifu loli BOT <a href="https://github.com/absoluteionic/maya.bot">GitHub Repository</a>
 		</div>
-		<div class="window" data-title="Second">
+		<div class="window closed" data-title="Maya Platform">
 			Maya Status Platform: Uses the Maya Status Platform to get the status of the BOT and wake up. Host Service
 		</div>
-		<div class="window closed" data-title="Third">
+		<div class="window closed" data-title="Maya App">
 			Maya Android App: Download <a href="https://www.appcreator24.com/app989117">here</a>
 		</div>
-		<div class="window" data-title="Welcome">
+		<div class="window closed" data-title="About me...">
 			<h1>José Manuel Suárez Tocino / absoluteionic</h1>
 			<p>I am a Node.JS Discord Bot Developer</p>
 			<p>Happines for the work of the bots</p>
