--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			Maya Bot: Free Open Source waifu loli BOT <a href="https://github.com/absoluteionic/maya.bot">GitHub Repository</a>
 		</div>
 		<div class="window closed" data-title="Maya Platform">
-			Maya Status Platform: Uses the Maya Status Platform to get the status of the BOT and wake up. Host Service
+			<iframe height="100%" width="100%" src="https://initlab-maya-status.glitch.me/"></iframe> 
 		</div>
 		<div class="window closed" data-title="Maya App">
-			Maya Android App: Download <a href="https://www.appcreator24.com/app989117">here</a>
+			<iframe height="100%" width="100%" src="https://www.appcreator24.com/app989117"></iframe>
 		</div>
 		<div class="window closed" data-title="About me...">
 			<h1>José Manuel Suárez Tocino / absoluteionic</h1>
@@ -31,7 +31,7 @@
 			<p><strong>Use the Windows Envoriment to Navigate in my WebPage</strong></p>
 		</div>
 		
-		<div id="taskbar">		
+		<div id="taskbar">
 		</div>
 		
 		<div id="icons">
