--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<a class="openWindow" data-id="2">Maya Android App</a>
 			<a class="openWindow" data-id="3">About me...</a>
 		</div>
-		<a href="https://html5-templates.com/" rel="nofollow" target="_blank" id="templateLink">&copy; HTML5-Templates.com</a>	
+		<p>AbsoWin 1.0</p><a href="https://html5-templates.com/" rel="nofollow" target="_blank" id="templateLink">&copy; HTML5-Templates.com</a>	
 		<!-- You can use this template freely if you leave a visible link to HTML5-Templates.com -->
 	</div>
 </body>
