--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<p><strong>Use the Windows Envoriment to Navigate in my WebPage</strong></p>
 		</div>
 		<div class="window closed" data-title="Open Akaney X Session">
-			<iframe height="100%" width="100%" src="https://absoluteionic.github.io/akaney"></iframe>
+			<iframe height="100%" width="100%" src="https://absoluteionic.github.io/akaney/"></iframe>
 		</div>
 		
 		<div id="taskbar">
