--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<a href="https://html5-templates.com/" rel="nofollow" target="_blank" id="templateLink">AbsoWin 1.0</a>	
 		<!-- You can use this template freely if you leave a visible link to HTML5-Templates.com -->
 	</div>
+	</div>
 </body>
 
 </html>
