Force Navigate to other Window Framework

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
 			<hr />
 			<p><strong>Use the Windows Envoriment to Navigate in my WebPage</strong></p>
 		</div>
-		<div class="window closed" data-title="Open Akaney X Session">
-			<iframe height="100%" width="100%" src="https://absoluteionic.github.io/akaney/"></iframe>
-		</div>
 		
 		<div id="taskbar">
 		</div>
@@ -42,11 +39,10 @@
 			<a class="openWindow" data-id="1">Maya Status Platform</a>
 			<a class="openWindow" data-id="2">Maya Android App</a>
 			<a class="openWindow" data-id="3">About me...</a>
-			<a class="openWindow" data-id="4">Open Akaney Sessión</a>
+			<a href="https://absoluteionic.github.io/akaney/" data-id="4">Open Akaney Sessión</a>
 		</div>
 		<a href="https://html5-templates.com/" rel="nofollow" target="_blank" id="templateLink">AbsoWin 1.0</a>	
 		<!-- You can use this template freely if you leave a visible link to HTML5-Templates.com -->
-	</div>
 	</div>
 </body>
 
